--- a/random_quote/quotes/templates/random_quote.html
+++ b/random_quote/quotes/templates/random_quote.html
@@ -29,7 +29,8 @@
             <h3>Rest assured</h3>
         </div>
         <div class="modal-body">
-            <p>There will be no sound in this app. As in, ever.</p>
+            <p>There will be no sound in this app. </p>
+            <p>As in, <b>ever</b>.</p>
         </div>
         <div class="modal-footer">
             <a href="#" class="btn">Close</a>
