Changed some templates and added a property method

--- a/random_quote/quotes/templates/base.html
+++ b/random_quote/quotes/templates/base.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cats - n - Quotes</title>
+    <title>{%block pagetitle %}Cats - n - Quotes{% endblock %}</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css" />
+    <meta http-equiv="refresh" content="10" />
 </head>
 <body >
 
