Stylefix for the comeback

--- a/random_quote/quotes/templates/random_quote.html
+++ b/random_quote/quotes/templates/random_quote.html
@@ -11,7 +11,7 @@
         </p>
         <h1>{{ quote.quote }}</h1>
         {% if quote.comeback %}
-            <h3>{{ quote.comeback }}</h3>
+            <h2 class="comeback">{{ quote.comeback }}</h2>
         {% endif %}
     </div>
 
