Added tags and preselection. If a quote contains tags, it searches for a background with one of those same tags. Also, implemented a "muted"-mode for weekdays. During working hours, animated gifs are mostly stopped. For the fun of it, every now and then it plays one

--- a/random_quote/quotes/templates/base.html
+++ b/random_quote/quotes/templates/base.html
@@ -18,5 +18,6 @@
     <div class="background_image"><img src="{{ background_image }}" /></div>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.1.10.2.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/base.js"></script>
 </body>
 </html>
