--- a/random_quote/quotes/templates/base.html
+++ b/random_quote/quotes/templates/base.html
@@ -4,8 +4,9 @@
 <head>
     <title>{%block pagetitle %}Cats - n - Quotes{% endblock %}</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css" />
-    <meta http-equiv="refresh" content="10" />
+
 </head>
 <body >
 
