--- a/random_quote/quotes/templates/meme_quote.html
+++ b/random_quote/quotes/templates/meme_quote.html
@@ -4,15 +4,17 @@
 {% endblock %}
 {% block content %}
 
-    <div class="hero-unit">
-        <p class="">
-
-            {{ quote.avatar_html| safe }}
-        </p>
+    <div class="meme-unit">
         <h1>{{ quote.quote }}</h1>
+        <img src="{{ quote.meme.image.url }}" class="meme"/>
         {% if quote.comeback %}
             <h2 class="comeback">{{ quote.comeback }}</h2>
         {% endif %}
+        <div class="social">
+            <i class="icon-twitter"></i>
+            <i class="icon-facebook"></i>
+            <i class="icon-google-plus"></i>
+        </div>
     </div>
 
 {% endblock %}
