Updated font paths and icons

--- a/random_quote/quotes/static/css/base.css
+++ b/random_quote/quotes/static/css/base.css
@@ -43,7 +43,8 @@
     width: 100%;
 }
 
-.meme-unit h1, h2{
+.meme-unit h1,
+.meme-unit h2{
     font-family: Impact;
     letter-spacing: 2px;
     margin: 0;
