--- a/random_quote/quotes/templates/meme_quote.html
+++ b/random_quote/quotes/templates/meme_quote.html
@@ -11,9 +11,9 @@
             <h2 class="comeback">{{ quote.comeback }}</h2>
         {% endif %}
         <div class="social">
-            <i class="fa-twitter"></i>
-            <i class="fa-facebook"></i>
-            <i class="fa-google-plus"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-google-plus"></i>
         </div>
     </div>
 
