Updated font paths and icons

--- a/random_quote/quotes/templates/meme_quote.html
+++ b/random_quote/quotes/templates/meme_quote.html
@@ -10,11 +10,14 @@
         {% if quote.comeback %}
             <h2 class="comeback">{{ quote.comeback }}</h2>
         {% endif %}
+    {% comment %}
+        does not work yet
         <div class="social">
             <i class="fa fa-twitter"></i>
             <i class="fa fa-facebook"></i>
             <i class="fa fa-google-plus"></i>
         </div>
+    {% endcomment %}
     </div>
 
 {% endblock %}
