Added multiple comments

--- a/random_quote/quotes/static/css/base.css
+++ b/random_quote/quotes/static/css/base.css
@@ -70,3 +70,10 @@
 .modal-backdrop {
     z-index: 2;
 }
+
+.footnote {
+    opacity: 0.5;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
