--- a/random_quote/quotes/templates/detail_quote.html
+++ b/random_quote/quotes/templates/detail_quote.html
@@ -18,5 +18,7 @@
 {% endblock %}
 
 {% block footercontent %}
-
+<div class="background_image">
+    <img src="{{ background_image }}" alt="" />
+</div>
 {% endblock %}
