--- a/random_quote/quotes/templates/base.html
+++ b/random_quote/quotes/templates/base.html
@@ -39,6 +39,7 @@
 
 {% include random_cat_template %}
 -->
+    <meta http-equiv="refresh" content="10">
 </head>
 <body >
     <div class="content container ">
