Added detail url to the template, as a canonical URL

--- a/random_quote/quotes/templates/base.html
+++ b/random_quote/quotes/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/font-awesome.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css" />
     <meta name="author" content="A Random Quote Generator by Bart Stroeken - https://twitter.com/bartstroeken" />
+    {% block extra_header %} {% endblock %}
 <!--
              .-=. ___
   __ . __ .-;-%%i:-%%, ___________________________________________
